--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "acorn-jsx": "^5.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "esast-util-from-js": "^2.0.1",
+    "estree-util-to-js": "^2.0.0",
+    "estree-util-visit": "^2.0.0",
     "lucide-react": "^0.541.0",
     "next": "^15.5.0",
     "react": "^19.1.1",
